Rebuild golden cauldron interactions